B-F Sandbox Full-Backup/src/objects/SOD__c.object
<CustomObject>
    <description>Used for SOD Certification</description>
    <fields>
        <fullName>Business_Process_Owner__c</fullName>
        <label>Business Process Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_Complete__c</fullName>
        <label>Certified Complete?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_Status__c</fullName>
        <formula>IMAGE( CASE( Certified_Complete__c , 
&quot;No&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;Yes&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;/s.gif&quot;), &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certified Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Enter comments.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Method__c</fullName>
        <label>Compliance Method</label>
        <picklist>
            <picklistValues>
                <fullName>Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faxed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Control_Date__c</fullName>
        <label>Control Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Text__c</fullName>
        <formula>TEXT(MONTH(Due_Date__c )) &amp;&apos;/&apos;&amp; TEXT(DAY(Due_Date__c)) &amp;&apos;/&apos;&amp; TEXT(YEAR(Due_Date__c))</formula>
        <label>Due Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOD_Group_ID__c</fullName>
        <label>SOD Group ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOX_Contact_ID__c</fullName>
        <label>SOX Contact ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <description>Unique Identifier to prevent duplicates</description>
        <label>UniqueID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_ID_s__c</fullName>
        <label>User ID(s)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Name_s__c</fullName>
        <label>User Name(s)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tsid__c</fullName>
        <label>tsid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Certification Records</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>SOD_Group_ID__c</columns>
        <columns>Business_Process_Owner__c</columns>
        <columns>Compliance_Method__c</columns>
        <columns>Control_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Certified_Complete__c</columns>
        <columns>Certified_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Certified_Complete__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Certified_Complete__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>FDC-SoD Administrator</role>
            <role>Global Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Certification_Records</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>SOD_Group_ID__c</columns>
        <columns>Business_Process_Owner__c</columns>
        <columns>Compliance_Method__c</columns>
        <columns>Control_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Certified_Complete__c</columns>
        <columns>Certified_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Certified_Complete__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Certified_Complete__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>All Certification Records</label>
        <language>en_US</language>
        <sharedTo>
            <role>APAC KJ / Admin</role>
            <role>APAC MD / Admin</role>
            <role>CHN-Sales Manager</role>
            <role>FDC-SoD User</role>
            <role>Global Administrator</role>
            <role>TWN-Finance Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed</fullName>
        <columns>NAME</columns>
        <columns>SOD_Group_ID__c</columns>
        <columns>Business_Process_Owner__c</columns>
        <columns>Compliance_Method__c</columns>
        <columns>Control_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Certified_Complete__c</columns>
        <columns>Certified_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Certified_Complete__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All Closed</label>
        <language>en_US</language>
        <sharedTo>
            <role>FDC-SoD Administrator</role>
            <role>Global Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>SOD_Group_ID__c</columns>
        <columns>Business_Process_Owner__c</columns>
        <columns>Compliance_Method__c</columns>
        <columns>Control_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Certified_Complete__c</columns>
        <columns>Certified_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Certified_Complete__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>All Open</label>
        <language>en_US</language>
        <sharedTo>
            <role>FDC-SoD Administrator</role>
            <role>Global Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Closed_Certification_Records</fullName>
        <columns>NAME</columns>
        <columns>SOD_Group_ID__c</columns>
        <columns>Business_Process_Owner__c</columns>
        <columns>Compliance_Method__c</columns>
        <columns>Control_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Certified_Complete__c</columns>
        <columns>Certified_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Certified_Complete__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Closed Certification Records</label>
        <language>en_US</language>
        <sharedTo>
            <role>APAC KJ / Admin</role>
            <role>APAC MD / Admin</role>
            <role>CHN-Sales Manager</role>
            <role>FDC-SoD User</role>
            <role>TWN-Finance Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Certification_Records</fullName>
        <columns>NAME</columns>
        <columns>SOD_Group_ID__c</columns>
        <columns>Business_Process_Owner__c</columns>
        <columns>Compliance_Method__c</columns>
        <columns>Control_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Certified_Complete__c</columns>
        <columns>Certified_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Certified_Complete__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>My Open Certification Records</label>
        <language>en_US</language>
        <sharedTo>
            <role>APAC KJ / Admin</role>
            <role>APAC MD / Admin</role>
            <role>CHN-Sales Manager</role>
            <role>FDC-SoD User</role>
            <role>TWN-Finance Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>SOX Contact</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Records</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PreventChangeofSoxContactName</fullName>
        <active>true</active>
        <description>Prevents users from changing a custom field called Sox Contact (Name) after it has been saved initially - Used with Compensating Controls Application</description>
        <errorConditionFormula>AND( NOT( ISNEW() ), ISCHANGED(  Name ))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>SOX Contact cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreventChangeofUniqueID</fullName>
        <active>true</active>
        <description>Prevents users from changing a custom field called UniqueID after it has been saved initially - Used with Compensating Controls Application</description>
        <errorConditionFormula>AND( NOT( ISNEW() ), ISCHANGED( UniqueID__c ))</errorConditionFormula>
        <errorDisplayField>UniqueID__c</errorDisplayField>
        <errorMessage>UniqueID cannot be changed</errorMessage>
    </validationRules>
</CustomObject>